// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReminderNotification displays text for bookmark notifications (saved for later) 1`] = `
<div>
  <p
    class="str-chat__message-saved-for-later"
  >
    <span>
      Saved for later
    </span>
  </p>
</div>
`;

exports[`ReminderNotification displays text for reminder deadline if trespassed the refresh boundary 1`] = `
<div>
  <p
    class="str-chat__message-reminder"
  >
    <span>
      Reminder set
    </span>
    <span>
       · 
    </span>
    <span
      class="str-chat__message-reminder__time-left"
    >
      Due since 01/01/1970
    </span>
  </p>
</div>
`;

exports[`ReminderNotification displays text for time due in case of timed reminders (remind me) 1`] = `
<div>
  <p
    class="str-chat__message-reminder"
  >
    <span>
      Reminder set
    </span>
    <span>
       · 
    </span>
    <span
      class="str-chat__message-reminder__time-left"
    >
      Due in a minute
    </span>
  </p>
</div>
`;
